// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic button 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.1875em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.15);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.15), 0 0 0 4px rgba(var(--focus-color),0.3);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.3), 0 0 0 4px rgba(var(--focus-color),0.3);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

<button
  className="c0"
/>
`;

exports[`renders large button 1`] = `
.c0 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: bold;
  font-size: 1.1875;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.1875em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c0:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.15);
}

.c0:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.15), 0 0 0 4px rgba(var(--focus-color),0.3);
}

.c0:active,
.c0.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.3), 0 0 0 4px rgba(var(--focus-color),0.3);
}

.c0:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c0[disabled] {
  pointer-events: none;
}

.c0[disabled]:after {
  display: block;
}

<button
  className="c0"
/>
`;
